<resources>
    <string name="app_name">Opinder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="neutral">Neutral</string>
    <string name="see_results">See results</string>
    <string name="no_opins_left">No Opins left</string>
    <string name="congratulations">Congratulations!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
