<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="noOpinsFragmentViewModel"
            type="com.example.opinder.screens.no_opins.NoOpinsFragmentViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        tools:context=".screens.no_opins.NoOpinsFragment"
        android:id="@+id/noOpinsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/partyImage"
            android:layout_width="221dp"
            android:layout_height="151dp"
            android:layout_marginTop="165dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/party" />

        <TextView
            android:id="@+id/congratulations_text"
            android:layout_width="257dp"
            android:layout_height="37dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/cabin_bold"
            android:text="@string/congratulations"
            android:textAlignment="center"
            android:textColor="#292929"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/partyImage" />

        <TextView
            android:id="@+id/noOpinsLeft_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/no_opins_left"
            android:textColor="#737373"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/congratulations_text" />

        <Button
            android:id="@+id/resultsButton"
            android:onClick="@{() -> noOpinsFragmentViewModel.onHasVoted()}"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@android:color/black"
            android:text="@string/see_results"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noOpinsLeft_text" />

        <Button
            android:id="@+id/voteAgainButton"
            android:layout_width="46dp"
            android:layout_height="43dp"
            android:layout_marginBottom="60dp"
            android:background="@android:color/white"
            app:icon="@drawable/undo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>