<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="titleFragmentViewModel"
            type="com.example.opinder.screens.opins.TitleFragmentViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleFragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.opins.TitleFragment">


        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:src="@drawable/opinder"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
            app:layout_constraintStart_toEndOf="@+id/imageButton2" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="7dp"
            android:background="@android:color/white"
            android:src="@drawable/iddn"
            app:layout_constraintEnd_toStartOf="@+id/imageButton3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/disagreeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="49dp"
            android:background="@android:color/black"
            android:onClick="@{() -> titleFragmentViewModel.onDisagree()}"
            android:text="@string/disagree"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/neutralButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/agreeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@android:color/black"
            android:onClick="@{() -> titleFragmentViewModel.onAgree()}"
            android:text="@string/agree"
            app:layout_constraintBaseline_toBaselineOf="@+id/neutralButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/neutralButton" />

        <Button
            android:id="@+id/neutralButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="50dp"
            android:background="@android:color/black"
            android:onClick="@{() -> titleFragmentViewModel.onNeutral()}"
            android:text="@string/neutral"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/agreeButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/disagreeButton" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="321dp"
            android:text="@{titleFragmentViewModel.apiResponseStatus}"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="20dp"
            app:imageUrl="@{titleFragmentViewModel.card.imageId}"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:color/transparent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>